# secure-vu

./: .dockerignore  .env.example  .gitignore  =0.10.0  CCTV_INTEGRATION_GUIDE.md  CLIENT_ONPREM_LICENSING_MODEL.md  DEPLOYMENT_GUIDE_SUMMARY.md  Dockerfile  FACE_DETECTION_FIX.md  KT_SecureVu_Pranaya_Mathur.md  MODEL_COMPARISON_SECURE_CV_V4.md  MODEL_STATS_REPORT.md  MODEL_TRAINING_REPORT.md  PROJECT_CONTINUATION_GUIDE.md  README.md  SECUREVU_OPTIMIZATION_PLAN.md  SECUREVU_REFINEMENT_PLAN.md  cctv_4cam_test.py  diagnose_face_detection.py  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  session_report.md  setup_db.sh  stats_1cam_face.csv  training_log.txt  training_log_11l.txt  training_log_11x.txt
Software product/: SECUREVU- Product Architecture .md  SecureVU — Development Timeline.md
app/: auth.py  bbox_smoother.py  db.py  faceid.py  liveness.py  middleware.py  ml_tracking.py  package-lock.json  rbac.py  recording.py  server.py  tracking.py
config/: camera_rules.json  cctv_person.yaml  runtime_flags.json
db/: schema.sql
docs/: CCTV_INTEGRATION_GUIDE.md  CPU_ONLY_PLAN.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_SUMMARY.md  DEVELOPMENT_LOG.md  MLFLOW.md  MODEL_STATS_REPORT.md  MODEL_TRAINING_REPORT.md  PROJECT_CONTINUATION_GUIDE.md  README.md
handoff/: CHECKLIST.md  OWNER-SUPPLIES.txt  README-HANDOFF.md  USB-PACKAGE.txt  env-template.example.txt  env-template.txt  install-from-handoff.sh
migrations/: 001_init.sql  002_poc.sql
not_using_but_kept/: .renderignore  enroll.html
scripts/: assign_camera.py  benchmark_config.py  benchmark_runtime.py  benchmark_smoothing.py  collect_stats.py  download_buffalo.sh  export_engine.py  invite_member.py  train.py  (+9 more)
(+68 files in other folders)
