[project]
name = "object-detection-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "insightface>=0.7.3",
    "PyJWT>=2.11.0",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "ultralytics>=8.4.14",
    "fastapi[standard]>=0.131.0",
]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "vulture>=2.14",
]
