[project]
name = "object-detection-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "insightface>=0.7.3",
    "PyJWT>=2.11.0",
    "onnxruntime-gpu>=1.23.2; sys_platform != 'darwin'",
    "onnxruntime>=1.23.2; sys_platform == 'darwin'",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.1",
    "torch>=2.10.0",
    "ultralytics>=8.4.14",
    "lap>=0.5.12",
    "fastapi[standard]>=0.131.0",
    "supervision>=0.27.0.post2",
]
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "vulture>=2.14",
]
mlops = [
    "mlflow>=2.20.0",
]

[tool.vulture]
exclude = [".venv", "node_modules", "frontend"]
min_confidence = 60
paths = ["app/"]
sort_by_size = true

